@@ -5,6 +5,7 @@ import DocumentTitle from 'react-document-title';
 import ListLink from '../components/listLink';
 import LoadingError from '../components/loadingError';
 import LoadingIndicator from '../components/loadingIndicator';
+import ReleaseStats from '../components/releaseStats';
 import ProjectState from '../mixins/projectState';
 import TimeSince from '../components/timeSince';
 import Version from '../components/version';
@@ -92,17 +93,19 @@ const ReleaseDetails = React.createClass({
 
     let release = this.state.release;
     let {orgId, projectId} = this.props.params;
-
     return (
       <DocumentTitle title={this.getTitle()}>
         <div>
           <div className="release-details">
             <div className="row">
-              <div className="col-sm-6 col-xs-12">
+              <div className="col-sm-4 col-xs-12">
                 <h3>{t('Release')} <strong><Version orgId={orgId} projectId={projectId} version={release.version} anchor={false} /></strong></h3>
                 <div className="release-meta">
                   <span className="icon icon-clock"></span> <TimeSince date={release.dateCreated} />
                 </div>
+              </div>
+              <div className="col-sm-2 hidden-xs">
+                <ReleaseStats release={release}/>
               </div>
               <div className="col-sm-2 hidden-xs">
                 <div className="release-stats">
