@@ -28,6 +28,7 @@ API Changes
 ~~~~~~~~~~~
 
 - Added avatar and avatarType to ``/organizations/{org}/`` endpoint.
+- Provide commit and author information associated with a given release
 
 Version 8.12
 ------------
